--- a/index.html
+++ b/index.html
@@ -182,6 +182,13 @@ const wealthTaxByCountry = {
     design: "Rates vary by region up to ~3%.",
     alternatives: "Inheritance and capital gains taxes."
   },
+  Germany: {
+  status: "alt",   // use "net", "alt", or "none"
+  summary: "Germany had a net wealth tax until 1997.",
+  design: "Previously taxed net wealth at around 1%.",
+  alternatives: "Abolished after constitutional court ruled valuation rules unequal."
+},
+
   France: {
     status: "alt",
     summary: "Replaced wealth tax with real-estate wealth tax (IFI).",
