--- a/index.html
+++ b/index.html
@@ -169,7 +169,16 @@ const wealthTaxByCountry = {
     summary: "Cantonal net wealth tax on worldwide assets.",
     design: "Progressive rates typically 0.1%–1%.",
     alternatives: "Relatively low capital gains taxes."
+    
+
   },
+  Sweden: {
+  status: "alt",
+  summary: "Sweden had a wealth tax until 2007.",
+  design: "Rate of approximately 1.5% on net wealth.",
+  alternatives: "Abolished due to capital flight and low revenue."
+},
+
   Norway: {
     status: "net",
     summary: "National and municipal net wealth tax above threshold.",
